--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
 # Web Dashboard Dependencies
 flask>=3.0.0
 flask-cors>=4.0.0
+
+# InfluxDB + OpenTelemetry
+influxdb-client>=1.43.0
+opentelemetry-api>=1.28.0
+opentelemetry-sdk>=1.28.0
+opentelemetry-exporter-otlp>=1.28.0
